tests/codegen/fail/scalar/derive_input/attr_transparent_and_with.rs
use coasys_juniper::graphql_scalar;

#[graphql_scalar(with = Self, transparent)]
struct Scalar;

fn main() {}
